--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .main_header{
@@ -70,4 +71,144 @@ nav ul li{
     text-decoration: none;
     color: white;
 }
+.fa-bars{
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
 
+.right_main_header_for_480{
+    display: none;
+}
+
+.main_page_image {
+    width: 100%;
+    height: 92.9vh; /* ეკრანის 80% */
+    background-image: url("picture for main page.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative; /* overlay-ს დასაწყობად */
+}
+
+.overlay_content {
+    position: absolute; /* სურათზე ჩასასმელად */
+    top: 50%; /* vertically ცენტრში */
+    left: 35%; /* horizontally ცენტრში */
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: rgb(239, 224, 224); /* ტექსტი კარგად გამოჩნდეს */
+}
+
+
+.main_page_text_in_backgorund{
+    font-size: 30px;
+}
+
+
+/* CSS */
+.button-85 {
+  padding: 15px;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-size: 20px;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+/* ტელეფონებისთვის */
+@media (max-width: 480px) {
+    .right_main_header{
+        display: none;
+    }
+    .right_main_header_for_480{
+        display: block;
+    }
+}
+/* პატარა ტელეფონები */
+@media (max-width: 360px) {
+        .right_main_header{
+        display: none;
+    }
+    .right_main_header_for_480{
+        display: block;
+    }
+}
+/* საშუალო ტელეფონები */
+@media (max-width: 414px) {
+        .right_main_header{
+        display: none;
+    }
+    .right_main_header_for_480{
+        display: block;
+    }
+}
+
+@media (max-width: 1030px){
+        .right_main_header{
+        display: none;
+    }
+    .right_main_header_for_480{
+        display: block;
+    }
+}
