დიდი განახლება. ნავიგაცია. ნავ ბარის სკრიპტი. ახალი გვერდები

--- a/style.css
+++ b/style.css
@@ -172,16 +172,18 @@ nav ul li{
     display: block;
 }
 .overlay_content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    margin: 0 auto;
+    padding-top: 50px;
     position: absolute;
-    top: 50%;       /* ვერტიკალურად ცენტრი */
-    left: 40%;      /* ჰორიზონტალურად ცენტრი */
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: rgb(239, 224, 224);
-    width: 80%;        /* მასშტაბირებადია ყველა ეკრანზე */
-    max-width: 900px;  /* მაქსიმალური სიგანე დიდ ეკრანებზე */
+    top: 300px;
+    left: 50%;
+    translate: -50% -50%;
 }
-
 .overlay_content h1 {
     font-size: 3rem;   /* დიდი ეკრანისთვის */
     margin-bottom: 20px;
@@ -193,32 +195,36 @@ nav ul li{
 
 }
 
-/* საშუალო ტელეფონები */
-@media (max-width: 1030px) {
-    .overlay_content h1 {
-        font-size: 2.5rem;
-    }
-    .overlay_content p {
-        font-size: 1.3rem;
-    }
+.right_main_header_2{
+    display: none;
 }
 
-/* 480-414px ტელეფონები */
-@media (max-width: 480px) {
-    .overlay_content h1 {
-        font-size: 1.8rem;
-    }
-    .overlay_content p {
-        font-size: 1rem;
-    }
+.mobile_menu {
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    width: 100%;
+    background-color: blueviolet;
+    display: none;
+    z-index: 1000;
 }
 
-/* ძალიან პატარა ტელეფონები */
-@media (max-width: 360px) {
-    .overlay_content h1 {
-        font-size: 1.5rem;
-    }
-    .overlay_content p {
-        font-size: 0.9rem;
-    }
+.mobile_menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
+
+.mobile_menu ul li {
+    padding: 15px;
+    text-align: center;
+    color: white;
+    font-size: 22px;
+    border-bottom: 1px solid rgba(255,255,255,0.3);
+    cursor: pointer;
+}
+
+.mobile_menu ul li:hover {
+    background-color: rgba(0,0,0,0.2);
+}
+
