--- a/style.css
+++ b/style.css
@@ -84,12 +84,12 @@ nav ul li{
 
 .main_page_image {
     width: 100%;
-    height: 92.9vh; /* ეკრანის 80% */
+    height: 92.9vh; 
     background-image: url("picture for main page.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    position: relative; /* overlay-ს დასაწყობად */
+    position: relative;
 }
 
 
@@ -99,7 +99,6 @@ nav ul li{
 }
 
 
-/* CSS */
 .button-85 {
   padding: 15px;
   border: none;
@@ -185,7 +184,7 @@ nav ul li{
     translate: -50% -50%;
 }
 .overlay_content h1 {
-    font-size: 3rem;   /* დიდი ეკრანისთვის */
+    font-size: 3rem;
     margin-bottom: 20px;
 }
 
@@ -241,13 +240,3 @@ nav ul li{
   object-fit: cover;
 }
 
-
-/* საშუალო ტელეფონები */
-@media (max-width: 1236px) {
-    .right_main_header{
-        display: none;
-    }
-    .right_main_header_2{
-        display: block;
-    }
-}
